# crew-ai-trial

./: .gitignore  INTEGRATION_README.md  README.md  execution_plan.json  execution_summary.json  expenses.csv  file_index_index.faiss  file_index_metadata.pkl  music_model_data.csv  project_config.json  project_setup.md  pyproject.toml  report.md  start_nova.py  test.py  test_integration.py
flutter_desktop/: README.md  pubspec.yaml
flutter_desktop/android/app/: build.gradle.kts
flutter_desktop/ios/Runner/: Info.plist
flutter_desktop/ios/Runner.xcodeproj/: project.pbxproj
flutter_desktop/lib/: main.dart
flutter_desktop/lib/src/: app.dart
flutter_desktop/linux/: CMakeLists.txt
flutter_desktop/linux/runner/: my_application.cc
flutter_desktop/macos/Runner.xcodeproj/: project.pbxproj
flutter_desktop/test/: widget_test.dart
flutter_desktop/web/: index.html  manifest.json
flutter_desktop/windows/: CMakeLists.txt
flutter_desktop/windows/runner/: Runner.rc  main.cpp
frontend/: README.md  README_UI.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/dist-electron/: main.mjs  preload.mjs
frontend/src/: App.tsx  firebase.ts  global.d.ts  index.css  main.tsx
frontend/src/api/: chat.ts  chatService.ts  client.ts  types.ts
frontend/src/components/: AgentOpsPanel.tsx  Auth.tsx  Composer.tsx  DashboardCard.tsx  FullChat.tsx  GoogleSetupWizard.tsx  LoginForm.tsx  MainLayout.tsx  MiniWidget.tsx  ProfileSetupForm.tsx  SchedulerKanban.tsx  Settings.tsx  Sidebar.tsx  Topbar.tsx  WindowTitleBar.tsx  google_cal.tsx
frontend/src/context/: AuthContext.tsx  NovaContext.tsx
frontend/src/hooks/: useAgentOps.ts  useAuth.ts  useElectronApi.ts
frontend/src/pages/: Index.tsx
frontend/src/utils/: auth.ts
knowledge/: operations.json  operations.txt  user_preference.txt  user_profile.json
knowledge/configs/: memory_policy.json
knowledge/memory/long_term/: projects_and_tasks.json
knowledge/memory/short_term/: .gitkeep  session_2025-09-07.json
src/: __init__.py  app.py  chat_history.py  crew.py  debug.py  desktop_app.py  firebase_client.py  main.py  memory_manager.py  migrate_to_firebase.py  oauth_setup.py  operations_store.py  server.py  test.py
src/agent_demo/: __init__.py  accessibility.py  crew.py  desktop_app.py  main.py  server.py  settings.py
src/agent_demo/config/: agents.yaml  tasks.yaml
src/common_functions/: User_preference.py
src/config/: agents.yaml  tasks.yaml
src/electron_app/: index.html  package-lock.json
src/routes/: auth.py  events.py  google_auth.py  other.py  sync.py  tasks.py
src/tools/: file_manager_tool.py  long_term_rag_tool.py  operations_tool.py  rag_tool.py
test/: test.py
test/code_generator/: main.py  requirements.txt
(+155 files in other folders)
