[project]
name = "agent_demo"
version = "0.1.0"
description = "agent_demo using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.67.1,<1.0.0",  # Update to latest
    "fastapi>=0.116.1",
    "pyside6>=6.9.2",
    "requests>=2.32.4",
    "uiautomation>=2.0.29",
    "uvicorn>=0.35.0",
]

[project.scripts]
agent_demo = "agent_demo.main:run"
run_crew = "agent_demo.main:run"
train = "agent_demo.main:train"
replay = "agent_demo.main:replay"
test = "agent_demo.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"