[project]
name = "agent_demo"
version = "0.1.0"
description = "agent_demo using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.152.0,<1.0.0",
    "fastapi>=0.116.1",
    "pyside6>=6.9.2",
    "requests>=2.32.4",
    "uiautomation>=2.0.29",
    "uvicorn>=0.35.0",
    "pyperclip>=1.8.2",
    "keyboard>=0.13.5",
    "psutil>=5.9.0",
]

[project.scripts]
agent_demo = "agent_demo.main:run"
run_crew = "agent_demo.main:run"
train = "agent_demo.main:train"
replay = "agent_demo.main:replay"
test = "agent_demo.main:test"
ui = "agent_demo.main:run_ui"
listener = "agent_demo.desktop_app:main"  # New: Runs background text selection listener

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"